# BoshiRoll

./: .gitignore  CMakeLists.txt  CMakeSettings.json  README.md
Boshiroll/: AnimSprite.h  BaseSprite.cpp  BaseSprite.h  Camera.h  Entity.cpp  Entity.h  FontSprite.cpp  FontSprite.h  Game.cpp  Game.h  Level.h  Mat22.cpp  Player.cpp  Player.h  Tongue.cpp  Tongue.h  Vec2.h  debug.cpp  main.cpp
EndlessRider/: Game.h
Soniclone/: AnimSprite.cpp  AnimSprite.h  BaseSprite.cpp  BaseSprite.h  Camera.cpp  Camera.h  CircleCollider.cpp  CircleCollider.h  Colliders.cpp  Colliders.h  Entity.cpp  Entity.h  FontSprite.cpp  FontSprite.h  Game.cpp  Game.h  Level.cpp  Level.h  LineCollider.cpp  LineCollider.h  Mat22.cpp  Mat22.h  RectCollider.cpp  RectCollider.h  SpinSprite.cpp  SpinSprite.h  Sprites.h  Vec2.cpp  Vec2.h  collision.cpp  collision.h  debug.h  globals.h  main.cpp  utils.cpp  utils.h
cmake/box2d/: FindBox2D.cmake
src/: Anchor.h  AnimSprite.cpp  AnimSprite.h  BaseButtonAction.h  BaseRenderCommand.h  BaseSprite.cpp  BaseSprite.h  ButtonActions.h  ButtonActions.tpp  CMakeLists.txt  Camera.cpp  Camera.h  Colliders.cpp  Colliders.h  DebugMode.h  Enemy.cpp  Enemy.h  Entity.cpp  Entity.h  FontSprite.cpp  FontSprite.h  FontTextureCache.cpp  FontTextureCache.h  Game.cpp  Game.h  Level.cpp  Level.h  LevelFactory.cpp  LevelFactory.h  Mat22.cpp  Mat22.h  Menu.cpp  Menu.h  MenuButton.cpp  MenuButton.h  MenuScreen.cpp  MenuScreen.h  MenuText.h  Player.cpp  Player.h  (+20 more)
